Add support for the email required flag

--- a/example/get-voucher-iframe.html
+++ b/example/get-voucher-iframe.html
@@ -10,12 +10,14 @@
 <div class="voucherify-get-voucher"
      data-client-app-id="ce7f4c9d-eca0-4e98-aabd-442caf4defb2"
      data-client-token="4df92faf-b686-46bf-9559-67bd60850b70"
+     data-email-required="false"
      data-campaign="Super Loyality"></div>
 
 <div>2</div>
 <div class="voucherify-get-voucher"
      data-client-app-id="ce7f4c9d-eca0-4e98-aabd-442caf4defb2"
      data-client-token="4df92faf-b686-46bf-9559-67bd60850b70"
+     data-email-required="true"
      data-campaign="Flying carpet"></div>
 
 <div>3</div>
