Fix support for custom logo

--- a/example/examples-iframe.html
+++ b/example/examples-iframe.html
@@ -12,17 +12,19 @@
 
 <div>1</div>
 <div class="voucherify-get-voucher"
-     data-client-app-id="ce7f4c9d-eca0-4e98-aabd-442caf4defb2"
-     data-client-token="4df92faf-b686-46bf-9559-67bd60850b70"
+     data-client-app-id="011240bf-d5fc-4ef1-9e82-11eb68c43bf5"
+     data-client-token="9e2230c5-71fb-460a-91c6-fbee64707a20"
      data-email-required="false"
-     data-campaign="Campaign Amount Discount"></div>
+     data-campaign="Campaign Amount Discount"
+
+     data-logo="https://app.voucherify.io/images/favicon.png"></div>
 
 <h2>Subscribe</h2>
 
 <div>1</div>
 <div class="voucherify-subscribe"
-     data-client-app-id="ce7f4c9d-eca0-4e98-aabd-442caf4defb2"
-     data-client-token="4df92faf-b686-46bf-9559-67bd60850b70"
+     data-client-app-id="011240bf-d5fc-4ef1-9e82-11eb68c43bf5"
+     data-client-token="9e2230c5-71fb-460a-91c6-fbee64707a20"
 
      data-name-field-required="false"
      data-name-field-label="Your name"
