Add example for redeem widget

--- a/example/examples-iframe.html
+++ b/example/examples-iframe.html
@@ -50,7 +50,47 @@
 
      data-logo="https://app.voucherify.io/images/favicon.png"></div>
 
-<h2>Subscribe</h2>
+<h2>2. Voucher Redeem</h2>
+
+<div class="voucherify-voucher-redeem"
+     data-client-app-id="011240bf-d5fc-4ef1-9e82-11eb68c43bf5"
+     data-client-token="9e2230c5-71fb-460a-91c6-fbee64707a20"
+
+     data-campaign="Free 500"
+
+     data-name-field-required="false"
+     data-name-field-label="Your name"
+
+     data-email-field-label="Your email"
+
+     data-phone-field-required="false"
+     data-phone-field-label="Your phone number"
+
+     data-address-line-1-field-required="false"
+     data-address-line-1-field-label="Address line"
+
+     data-address-line-2-field="false"
+     data-address-line-2-field-required="false"
+     data-address-line-2-field-label="Same label"
+
+     data-city-field-required="true"
+     data-city-field-label="City where you live"
+
+     data-postal-code-field-required="false"
+
+     data-state-field-label="State"
+
+     data-country-field="true"
+     data-country-field-required="false"
+     data-country-field-label="Country"
+
+     data-button-label="Get your unique voucher"
+
+     data-source="Voucherify Iframe Example"
+
+     data-metadata="{'example': true, 'lang': 'eng'}"
+
+     data-logo="https://app.voucherify.io/images/favicon.png"></div>
 
 <h2>3. Subscribe</h2>
 
