--- a/example/examples-iframe.html
+++ b/example/examples-iframe.html
@@ -114,10 +114,10 @@
 
      data-metadata="{'example': true, 'lang': 'eng', 'gdpr_test': true}"
 
-     data-label="Marketing Permissions"
-     data-description="The Company Name will use the information you provide on this form to be in touch with you and to provide updates and marketing. Please let us know all the ways you would like to hear from us:"
-     data-options="Email;Phone"
-     data-legal="You can change your mind at any time by clicking the unsubscribe link in the footer of any email you receive from us, or by contacting us at [support@company.com](mailto:support@company.com). We will treat your information with respect. For more information about our privacy practices please visit our website. By clicking below, you agree that we may process your information in accordance with these terms."></div>
+     data-consent-label="Marketing Permissions"
+     data-consent-description="The Company Name will use the information you provide on this form to be in touch with you and to provide updates and marketing. Please let us know all the ways you would like to hear from us:"
+     data-consent-options="Email;Phone"
+     data-consent-legal="You can change your mind at any time by clicking the unsubscribe link in the footer of any email you receive from us, or by contacting us at [support@company.com](mailto:support@company.com). We will treat your information with respect. For more information about our privacy practices please visit our website. By clicking below, you agree that we may process your information in accordance with these terms."></div>
 
 <script type="text/javascript" src="../lib/voucherify.js"></script>
 </body>
