--- a/example/examples-iframe.html
+++ b/example/examples-iframe.html
@@ -88,6 +88,10 @@
 
      data-source="Voucherify Iframe Example"
 
+     data-success-message="Redeem succeed"
+
+     data-failure-message="Redeem failed"
+
      data-metadata="{'example': true, 'lang': 'eng'}"
 
      data-logo="https://app.voucherify.io/images/favicon.png"></div>
