--- a/example/examples-iframe.html
+++ b/example/examples-iframe.html
@@ -88,9 +88,9 @@
 
      data-source="Voucherify Iframe Example"
 
-     data-success-message="Redeem succeed"
+     data-success-message="Redemption succeeded"
 
-     data-failure-message="Redeem failed"
+     data-failure-message="Redemption failed"
 
      data-metadata="{'example': true, 'lang': 'eng'}"
 
